<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CVAFR-188</string>
    <string name="login_prompt">将人脸放入框内，点击下方开始刷脸，\n即可自动登录</string>
    <string name="start_check_face">刷脸登录</string>
    <string name="face_compare">人脸对比</string>
    <string name="similarity">相似度</string>
    <string name="similarity_is">相似度：</string>
    <string name="submit">提交</string>
    <string name="name">姓名</string>
    <string name="fill_name">请填写姓名</string>
    <string name="id_number">身份证号码</string>
    <string name="fill_id_number">请填写身份证号码</string>
    <string name="sex">性别</string>
    <string name="fill_sex">请填写性别</string>
    <string name="location">籍贯</string>
    <string name="fill_location">请填写籍贯</string>
    <string name="remark">备注</string>
    <string name="fill_remark">请填写备注</string>
    <string name="base_parameters">基本参数</string>
    <string name="threshold_value_face">人脸对比阈值</string>
    <string name="threshold_value_check">人脸检测参数</string>
    <string name="threshold_value_hint">低于该阈值的比对结果不会显示,为0表示不显示</string>
    <string name="display_count">显示结果数量</string>
    <string name="save_count">保存记录数量</string>
    <string name="less_or_equals">小于等于</string>
    <string name="min_faces">最小人脸:</string>
    <string name="threshold_quantity">临界值:</string>
    <string name="min_eyes_distance" tools:ignore="ExtraTranslation">最小瞳距:</string>
    <string name="min_faces_hint">范围是0.0-1.0</string>
    <string name="check_factor_hint">0-1</string>
    <string name="check_facotr1">检测参数1:</string>
    <string name="check_facotr2">检测参数2:</string>
    <string name="check_facotr3">检测参数3:</string>
    <string name="piece">条</string>
    <string name="filter_parameters">过滤参数</string>
    <string name="all">全部</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age_range">年龄区间</string>
    <string name="please_choose">请选择</string>
    <string name="alter_ip">域名地址更改</string>
    <string name="order">序号</string>
    <string name="library_name">库名称</string>
    <string name="library_count">库数量</string>
    <string name="library_state">库状态</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="wlan_4g_auto_switch">WLAN/4G自动切换</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="switch_to_face_login">刷脸登录</string>
    <string name="switch_to_normal_login">密码登录</string>
    <string name="login_normal">密码登录</string>
    <string name="title_batch">批量比对</string>
    <string name="choose_folder_prompt">*选择批量比对文件夹</string>
    <string name="compare_progress">比对进度</string>
    <string name="select_all">全选</string>
    <string name="batch_compare">批量比对</string>
    <string name="opt">操作</string>
    <string name="add_new">新增</string>
    <string name="add_photo">添加照片</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="collect_date">采集日期</string>
    <string name="to">到</string>
    <string name="start_query">开始查询</string>
    <string name="more">更多</string>
    <string name="id_card_face">证件人脸</string>
    <string name="person_face">活体人脸</string>
    <string name="verify_prompt">*请依次上传证件照和拍摄人脸</string>
    <string name="id_card_take_photo_prompt">*请将证件对准此框</string>
    <string name="person_take_photo_prompt">*请将人脸对准此框</string>
    <string name="race">民族</string>
    <string name="fill_race">请填写名族</string>
    <string name="phone_number">电话号码</string>
    <string name="fill_phone_number">请填写电话号码</string>
    <string name="id_card_number">身份证号</string>
    <string name="age">年龄</string>
    <string name="server_set">配置服务器</string>
    <string name="start_verify">开始比对</string>
    <string name="img_choose">图片选择</string>
    <string name="no_need_login">当前服务器无需认证</string>
    <string name="feedback">反馈</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_face">刷脸登录</string>
    <string name="camera_dpi">摄像头分辨率</string>
    <string name="alarm_type">警报类型</string>
    <string name="is_no_same">是否开启跟踪去重</string>
    <string name="alarm_only_mp3">仅响铃</string>
    <string name="alarm_only_shake">仅振动</string>
    <string name="alarm_mp3_and_shake">响铃加振动</string>
    <string name="equal">等于</string>
    <string name="modify_password">修改密码</string>
    <string name="device_id">设备ID</string>
    <string name="reupload_fail">失败重传</string>
</resources>
