<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y200"
    tools:ignore="RtlHardcoded"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/all_tv"
        android:layout_marginLeft="@dimen/x100"
        android:layout_gravity="center_vertical"
        android:background="@drawable/quanbu2"
        android:text="@string/all"
        android:gravity="center"
        android:textSize="@dimen/x42"
        android:textColor="@color/white"
        android:layout_width="@dimen/x100"
        android:layout_height="@dimen/x100"/>
    <TextView
        android:id="@+id/male_tv"
        android:layout_gravity="center"
        android:background="@drawable/quanbu2"
        android:text="@string/male"
        android:gravity="center"
        android:textSize="@dimen/x42"
        android:textColor="@color/white"
        android:layout_width="@dimen/x100"
        android:layout_height="@dimen/x100" />
    <TextView
        android:id="@+id/female_tv"
        android:layout_marginRight="@dimen/x100"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/quanbu2"
        android:text="@string/female"
        android:gravity="center"
        android:textSize="@dimen/x42"
        android:textColor="@color/white"
        android:layout_width="@dimen/x100"
        android:layout_height="@dimen/x100" />
</FrameLayout>